add github ci, add return service info
